--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,15 @@ project(':tracker-core') {
 //    mainClassName = 'jdev.tracker.TrackerMain'
 
     dependencies {
+        compile("org.springframework.boot:spring-boot-starter-web"){
+            exclude module: "spring-boot-starter-tomcat"
+        }
         compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
         compile("org.springframework.boot:spring-boot-starter-thymeleaf")
         compile("org.springframework.boot:spring-boot-devtools")
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
+        compile group: 'com.h2database', name: 'h2', version: '1.4.195'
         compile project(':common')
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
