--- a/tracker-core/src/main/resources/application.properties
+++ b/tracker-core/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=9090
+spring.datasource.url=jdbc:h2:file:./tracker
+spring.datasource.driver-class-name=org.h2.Driver
+liquibase.change-log=classpath:changelog/db.changelog-master.xml
+
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+#logging.level.org.hibernate.SQL=DEBUG
