--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,6 @@ buildscript {
 project(':tracker-core') {
     apply plugin: 'java-library-distribution'
     apply plugin: 'org.springframework.boot'
-//    apply plugin: 'com.github.johnrengelman.shadow'
-
-//    mainClassName = 'jdev.tracker.TrackerMain'
 
     dependencies {
         compile("org.springframework.boot:spring-boot-starter-web"){
@@ -58,8 +55,14 @@ project(':tracker-ui') {
 project(':server-core') {
     apply plugin: 'org.springframework.boot'
     dependencies {
+        compile("org.springframework.boot:spring-boot-starter-web"){
+            exclude module: "spring-boot-starter-tomcat"
+        }
         compile("org.springframework.boot:spring-boot-starter-thymeleaf")
         compile("org.springframework.boot:spring-boot-devtools")
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
+        compile group: 'com.h2database', name: 'h2', version: '1.4.195'
         compile project(':common')
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
