--- a/server-core/src/main/resources/application.properties
+++ b/server-core/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.main.banner-mode=off
+
+spring.datasource.url=jdbc:h2:file:./server
+spring.datasource.driver-class-name=org.h2.Driver
+liquibase.change-log=classpath:changelog/db.changelog-master.xml
+
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.username=sa
+spring.datasource.password=sa
